# rdru-lm

./: .gitignore  LICENSE  README.md  eval.py  generate.py  pyproject.toml  train.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
configs/: default.json  gsm8k.json  micro.json  nano.json  small.json
src/rdru/: __init__.py  config.py  data.py  model.py  trainer.py
tests/: test_config.py  test_data.py  test_model.py
